# rule-0-pr-command-center

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  sync-open-prs.yml
.superpowers/sdd/: cursor-cycle-fix-report.md  task-2-report.md
docs/research/: required-check-semantics.md
docs/superpowers/plans/: 2026-07-14-pr-command-center-milestones.md  2026-07-15-r1-attention-first-triage.md  2026-07-15-r2-responsive-pr-hierarchy.md
docs/superpowers/specs/: 2026-07-14-base-ci-design.md  2026-07-14-pr-command-center-milestones-design.md  2026-07-15-r1-attention-first-triage-design.md  2026-07-15-r2-responsive-pr-hierarchy-design.md
src/r0s_pr_command_center/: __init__.py  app.py  github_auth.py  settings.py  snapshot_store.py  views.py
src/r0s_pr_command_center/static/: styles.css
tests/: conftest.py  test_app.py  test_github_auth.py  test_project_sync_workflow.py  test_readme.py  test_scaffold.py  test_settings.py  test_snapshot_store.py  test_views.py
